# ESM-Drift

./: .gitignore  LICENSE  README.md  pyproject.toml
esm_drift/: drifting.py  model.py  utils.py
esm_drift/data/: dataset.py  extract.py
scripts/: download_atlas.py  evaluate.py  extract_embeddings.py  testing.py  train.py
